# pmm-ops

./: README.md  pyproject.toml  signzy-mcc-gtm-steps3-4-5.md  signzy-mcc-research.md
agents/: SKILL.md
docs/architecture/: agent-architecture.md  company-kb-spec.md
docs/case-studies/: PMM Positioning - Shitij (1).xlsx
docs/marketing/: why-superpmm.md
docs/research/: competitive-intelligence-signzy-mcc.md  market-opportunity.md  market-validation-pivot.md
docs/templates/: Algolia Messaging — Framework (Reshma Iyer).xlsx  Atlassian Message House — Template.xlsx  Google PMM Decide _ Input _ Notify — Framework.xlsx  Launch Plan — Template.xlsx  PMM GTM Launch — Execution Plan.xlsx  Positioning & Messaging — Framework.xlsx  Product Marketing Assistant (Custom GPT) — Checklist.xlsx  Product Marketing Internal Roadmap Template - DataDab.xlsx  Product Messaging Framework — Template.xlsx  Product Positioning Framework — template.xlsx  Qualitative Research — Template.xlsx  Stakeholder Management — template.xlsx  Storytelling Framework — template.xlsx
docs/v1-prd/: PRD.md  v1-agent-architecture.md
docs/vision/: product-vision.md
output/: SuperPMM-Discovery-Cashfree-VideoKYC.md  SuperPMM-Signzy-MCC-GTM.md
src/superpmm/: __init__.py  config.py  main.py
src/superpmm/agents/: __init__.py  orchestrator.py  runner.py
src/superpmm/prompts/: __init__.py  ci.py  discovery.py  gtm_plan.py  orchestrator.py  positioning.py  prfaq.py  research.py
src/superpmm/tools/: __init__.py  definitions.py  file_reader.py  web.py
