[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superpmm"
version = "0.1.0"
description = "SuperPMM — Build your Go-To-Market in 60 minutes, not 6 weeks."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mothi Venkatesh", email = "mothivenkatesh@gmail.com"}
]
dependencies = [
    "anthropic>=0.52.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
superpmm = "superpmm.main:main"

[tool.setuptools.packages.find]
where = ["src"]
